--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="AAP.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:AAP"
+             xmlns:local="clr-namespace:AAP" xmlns:themes="clr-namespace:AAP.UI.Themes"
              StartupUri="/WPF/Windows/MainWindow.xaml" ShutdownMode="OnMainWindowClose">
     <Application.Resources>
-         
+        <ResourceDictionary>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
