--- a/Resources/Themes/LightTheme.xaml
+++ b/Resources/Themes/LightTheme.xaml
@@ -29,7 +29,26 @@
         <Setter Property="Foreground" Value="{StaticResource Text}"/>
     </Style>
 
+    <Style TargetType="{x:Type controls:ImageButton}">
+        <Setter Property="Unhighlighted" Value="{StaticResource UnhighlightedInactive}"/>
+        <Setter Property="Highlighted" Value="{StaticResource HighlightedInactive}"/>
+        <Setter Property="Pressed" Value="{StaticResource Pressed}"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagementButton">
+        <Setter Property="Unhighlighted" Value="{StaticResource UnhighlightedInactive}"/>
+        <Setter Property="Highlighted" Value="{StaticResource HighlightedInactive}"/>
+        <Setter Property="Pressed" Value="{StaticResource Pressed}"/>
+    </Style>
+
     <Style TargetType="{x:Type controls:ImageStateBox}">
+        <Setter Property="UnhighlightedDisabled" Value="{StaticResource UnhighlightedInactive}"/>
+        <Setter Property="HighlightedDisabled" Value="{StaticResource HighlightedInactive}"/>
+        <Setter Property="UnhighlightedEnabled" Value="{StaticResource UnhighlightedActive}"/>
+        <Setter Property="HighlightedEnabled" Value="{StaticResource HighlightedActive}"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageStateBox}" x:Key="ToolStateBox">
         <Setter Property="UnhighlightedDisabled" Value="{StaticResource UnhighlightedInactive}"/>
         <Setter Property="HighlightedDisabled" Value="{StaticResource HighlightedInactive}"/>
         <Setter Property="UnhighlightedEnabled" Value="{StaticResource UnhighlightedActive}"/>
@@ -41,5 +60,58 @@
         <Setter Property="HighlightedDisabled" Value="{StaticResource HighlightedInactive}"/>
         <Setter Property="UnhighlightedEnabled" Value="{StaticResource UnhighlightedActive}"/>
         <Setter Property="HighlightedEnabled" Value="{StaticResource HighlightedActive}"/>
+        <Setter Property="Text" Value="{StaticResource Text}"/>
+    </Style>
+    
+    <!-- Tool State Boxes -->
+
+    <Style TargetType="{x:Type controls:ImageStateBox}" x:Key="Tool_Pencil" BasedOn="{StaticResource ToolStateBox}">
+        <Setter Property="ImageSource" Value="/Resources/Images/ToolIcons/Light/DrawToolIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageStateBox}" x:Key="Tool_Eraser" BasedOn="{StaticResource ToolStateBox}">
+        <Setter Property="ImageSource" Value="/Resources/Images/ToolIcons/Light/EraserToolIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageStateBox}" x:Key="Tool_Select" BasedOn="{StaticResource ToolStateBox}">
+        <Setter Property="ImageSource" Value="/Resources/Images/ToolIcons/Light/SelectToolIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageStateBox}" x:Key="Tool_Move" BasedOn="{StaticResource ToolStateBox}">
+        <Setter Property="ImageSource" Value="/Resources/Images/ToolIcons/Light/MoveToolIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageStateBox}" x:Key="Tool_Line" BasedOn="{StaticResource ToolStateBox}">
+        <Setter Property="ImageSource" Value="/Resources/Images/ToolIcons/Light/LineToolIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageStateBox}" x:Key="Tool_Bucket" BasedOn="{StaticResource ToolStateBox}">
+        <Setter Property="ImageSource" Value="/Resources/Images/ToolIcons/Light/BucketToolIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageStateBox}" x:Key="Tool_Text" BasedOn="{StaticResource ToolStateBox}">
+        <Setter Property="ImageSource" Value="/Resources/Images/ToolIcons/Light/TextToolIcon.png"/>
+    </Style>
+    
+    <!-- Layer Managemnt Buttons -->
+    
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_New" BasedOn="{StaticResource LayerManagementButton}">
+        <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Light/NewLayerIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_MoveUp" BasedOn="{StaticResource LayerManagementButton}">
+        <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Light/MoveLayerUpIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_MoveDown" BasedOn="{StaticResource LayerManagementButton}">
+        <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Light/MoveLayerDownIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_Duplicate" BasedOn="{StaticResource LayerManagementButton}">
+        <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Light/DuplicateLayerIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_Remove" BasedOn="{StaticResource LayerManagementButton}">
+        <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Light/DestroyLayerIcon.png"/>
     </Style>
 </ResourceDictionary>
