--- a/WPF/Windows/MainWindow.xaml
+++ b/WPF/Windows/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:AAP.UI.Windows"
         mc:Ignorable="d"
         Title="ASCII Art Program - {Art Info Text Here}" Height="450" Width="800" WindowState="Maximized"
-    xmlns:System="clr-namespace:System;assembly=System.Runtime" xmlns:aap="clr-namespace:AAP" xmlns:ui="clr-namespace:AAP.UI" xmlns:viewmodels="clr-namespace:AAP.UI.ViewModels" xmlns:controls="clr-namespace:AAP.UI.Controls" d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}" MinWidth="600" MinHeight="450">
+    xmlns:System="clr-namespace:System;assembly=System.Runtime" xmlns:aap="clr-namespace:AAP" xmlns:ui="clr-namespace:AAP.UI" xmlns:viewmodels="clr-namespace:AAP.UI.ViewModels" xmlns:controls="clr-namespace:AAP.UI.Controls" xmlns:themes="clr-namespace:AAP.UI.Themes" d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}" MinWidth="600" MinHeight="450">
     <Window.DataContext>
         <viewmodels:MainWindowViewModel x:Name="MainWindowViewModel"/>
     </Window.DataContext>
@@ -14,12 +14,11 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Styles/CheckBoxStyles.xaml"/>
-                <ResourceDictionary Source="/Resources/Themes/LightTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
-        <DockPanel Background="{Binding Mode=OneWay, Source={StaticResource DarkAccent}}">
+        <DockPanel Background="{DynamicResource DarkAccent}">
             <DockPanel.DataContext>
                 <viewmodels:ArtFileViewModel x:Name="ArtFileViewModel"/>
             </DockPanel.DataContext>
@@ -53,6 +52,7 @@
                             <MenuItem Header="Crop Layer" IsEnabled="{Binding HasSelected}" InputGestureText="Shift+Ctrl+Enter" Command="{Binding CropLayerCommand}"></MenuItem>
                         </MenuItem>
                         <MenuItem Header="View">
+                            <MenuItem Header="Dark Mode" IsChecked="{Binding DataContext.IsDarkModeOn, ElementName=window}" IsCheckable="True"></MenuItem>
                             <MenuItem Header="Toolbox">
                                 <MenuItem Header="Visible" IsCheckable="True" IsChecked="{Binding DataContext.IsToolboxVisible, ElementName=window}"></MenuItem>
                             </MenuItem>
@@ -81,7 +81,7 @@
                 </ToolBar>
             </ToolBarTray>
             <DockPanel HorizontalAlignment="Left" Margin="0,0,0,0" Width="200" ClipToBounds="True" Visibility="{Binding DataContext.ToolboxVisibility, ElementName=window}">
-                <Grid x:Name="ToolBox" VerticalAlignment="Top" Height="150" Background="{Binding Mode=OneWay, Source={StaticResource LightAccent}}" DockPanel.Dock="Top" Margin="0,0,0,5">
+                <Grid x:Name="ToolBox" VerticalAlignment="Top" Height="150" Background="{DynamicResource LightAccent}" DockPanel.Dock="Top" Margin="0,0,0,5">
                     <Grid.DataContext>
                         <viewmodels:ToolSelectionViewModel x:Name="ToolSelectionViewModel"/>
                     </Grid.DataContext>
@@ -96,22 +96,22 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <controls:ImageStateBox x:Name="DrawToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" BoxImageSource="/Resources/Images/ToolIcons/DrawToolIcon.png" AllowManualDisable="False" StateCommand="{Binding SetDrawToolCommand}"/>
-                    <controls:ImageStateBox x:Name="EraserToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Column="1" BoxImageSource="/Resources/Images/ToolIcons/EraserToolIcon.png" AllowManualDisable="False" StateCommand="{Binding SetEraserToolCommand}"/>
-                    <controls:ImageStateBox x:Name="SelectToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Column="2" BoxImageSource="/Resources/Images/ToolIcons/SelectToolIcon.png" AllowManualDisable="False" StateCommand="{Binding SetSelectToolCommand}"/>
-                    <controls:ImageStateBox x:Name="MoveToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Column ="3" Grid.Row="0" BoxImageSource="/Resources/Images/ToolIcons/MoveToolIcon.png" AllowManualDisable="False" StateCommand="{Binding SetMoveToolCommand}"/>
-                    <controls:ImageStateBox x:Name="LineToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Row="1" Grid.Column="0" BoxImageSource="/Resources/Images/ToolIcons/LineToolIcon.png" AllowManualDisable="False" StateCommand="{Binding SetLineToolCommand}"/>
-                    <controls:ImageStateBox x:Name="BucketToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Row="1" Grid.Column="1" BoxImageSource="/Resources/Images/ToolIcons/BucketToolIcon.png" AllowManualDisable="False" StateCommand="{Binding SetBucketToolCommand}"/>
-                    <controls:ImageStateBox x:Name="TextToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Row="1" Grid.Column="2" BoxImageSource="/Resources/Images/ToolIcons/TextToolIcon.png" AllowManualDisable="False" StateCommand="{Binding SetTextToolCommand}"/>
+                    <controls:ImageStateBox x:Name="DrawToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" AllowManualDisable="False" StateCommand="{Binding SetDrawToolCommand}" Style="{DynamicResource ResourceKey=Tool_Pencil}"/>
+                    <controls:ImageStateBox x:Name="EraserToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Column="1" Style="{DynamicResource ResourceKey=Tool_Eraser}" AllowManualDisable="False" StateCommand="{Binding SetEraserToolCommand}"/>
+                    <controls:ImageStateBox x:Name="SelectToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Column="2" Style="{DynamicResource ResourceKey=Tool_Select}" AllowManualDisable="False" StateCommand="{Binding SetSelectToolCommand}"/>
+                    <controls:ImageStateBox x:Name="MoveToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Column ="3" Grid.Row="0" Style="{DynamicResource ResourceKey=Tool_Move}" AllowManualDisable="False" StateCommand="{Binding SetMoveToolCommand}"/>
+                    <controls:ImageStateBox x:Name="LineToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Row="1" Grid.Column="0" Style="{DynamicResource ResourceKey=Tool_Line}" AllowManualDisable="False" StateCommand="{Binding SetLineToolCommand}"/>
+                    <controls:ImageStateBox x:Name="BucketToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Row="1" Grid.Column="1" Style="{DynamicResource ResourceKey=Tool_Bucket}" AllowManualDisable="False" StateCommand="{Binding SetBucketToolCommand}"/>
+                    <controls:ImageStateBox x:Name="TextToolStateBox" Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Grid.Row="1" Grid.Column="2" Style="{DynamicResource ResourceKey=Tool_Text}" AllowManualDisable="False" StateCommand="{Binding SetTextToolCommand}"/>
                 </Grid>
-                <Rectangle HorizontalAlignment="Stretch" Margin="2" Stroke="{Binding Mode=OneWay, Source={StaticResource Border}}" DockPanel.Dock="Top"/>
+                <Rectangle HorizontalAlignment="Stretch" Margin="2" Stroke="{DynamicResource Border}" DockPanel.Dock="Top"/>
                 <ScrollViewer DockPanel.Dock="Top" VerticalScrollBarVisibility="Auto" Margin="0,5,0,0">
                     <ScrollViewer.DataContext>
                         <viewmodels:ToolOptionsViewModel x:Name="ToolOptionsViewModel"/>
                     </ScrollViewer.DataContext>
                     <StackPanel>
                         <WrapPanel Visibility="{Binding CharacterOptionVisibility}">
-                            <WrapPanel Background="{Binding Mode=OneWay, Source={StaticResource LightAccent}}" Orientation="Vertical">
+                            <WrapPanel Background="{DynamicResource LightAccent}" Orientation="Vertical">
                                 <WrapPanel.DataContext>
                                     <viewmodels:CharacterPaletteSelectionViewModel x:Name="CharacterPaletteSelectionViewModel"/>
                                 </WrapPanel.DataContext>
@@ -122,24 +122,24 @@
                                 <controls:CharacterPaletteCharacterSelect VerticalAlignment="Top" Width="200" GridItemSize="45,45" MaxHeight="400" Margin="0,0,0,0" SelectedCharacter="{Binding SelectedCharacter, Mode=TwoWay}" Palette="{Binding SelectedPalette, Mode=OneWay}"/>
                             </WrapPanel>
                         </WrapPanel>
-                        <Rectangle HorizontalAlignment="Stretch" Margin="2" Stroke="{Binding Mode=OneWay, Source={StaticResource Secondary}}" DockPanel.Dock="Top" Visibility="{Binding CharacterOptionVisibility}"/>
-                        <WrapPanel Background="{Binding Mode=OneWay, Source={StaticResource LightAccent}}" Visibility="{Binding SizeOptionVisibility}">
+                        <Rectangle HorizontalAlignment="Stretch" Margin="2" Stroke="{DynamicResource Border}" DockPanel.Dock="Top" Visibility="{Binding CharacterOptionVisibility}"/>
+                        <WrapPanel Background="{DynamicResource LightAccent}" Visibility="{Binding SizeOptionVisibility}">
                             <Label Content="Size" Height="30" Margin="5,0,0,0"></Label>
                             <Slider Width="100" Margin="5,5,5,5" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Minimum="1" Value="{Binding Size}" Maximum="64"/>
                             <Label Content="{Binding Size}"/>
                         </WrapPanel>
-                        <WrapPanel Background="{Binding Mode=OneWay, Source={StaticResource LightAccent}}" Visibility="{Binding EightDirectionalOptionVisibility}">
-                            <CheckBox Content="Eight Directional" HorizontalAlignment="Left" Padding="5,0,5,0" Margin="5,5,5,5" Style="{StaticResource ContentLeftCheckBoxStyle}" IsChecked="{Binding EightDirectional}" Foreground="{Binding Mode=OneWay, Source={StaticResource Text}}"/>
+                        <WrapPanel Background="{DynamicResource LightAccent}" Visibility="{Binding EightDirectionalOptionVisibility}">
+                            <CheckBox Content="Eight Directional" HorizontalAlignment="Left" Padding="5,0,5,0" Margin="5,5,5,5" Style="{StaticResource ContentLeftCheckBoxStyle}" IsChecked="{Binding EightDirectional}" Foreground="{DynamicResource Text}"/>
                         </WrapPanel>
                     </StackPanel>
                 </ScrollViewer>
             </DockPanel>
-            <Rectangle VerticalAlignment="Stretch" Width="1" Margin="2" Stroke="{Binding Mode=OneWay, Source={StaticResource Border}}"/>
+            <Rectangle VerticalAlignment="Stretch" Width="1" Margin="2" Stroke="{DynamicResource Border}"/>
             <DockPanel Margin="0,0,0,0" Width="200" ClipToBounds="True" HorizontalAlignment="Right" DockPanel.Dock="Right" Visibility="{Binding DataContext.LayerManagementVisibility, ElementName=window}">
                 <DockPanel.DataContext>
                     <viewmodels:LayerManagementViewModel x:Name="LayerManagementViewModel"/>
                 </DockPanel.DataContext>
-                <Grid DockPanel.Dock="Bottom" Height="45" VerticalAlignment="Top" Background="{Binding Mode=OneWay, Source={StaticResource LightAccent}}">
+                <Grid DockPanel.Dock="Bottom" Height="45" VerticalAlignment="Top" Background="{DynamicResource LightAccent}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
@@ -147,13 +147,13 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/NewLayerIcon.png" Command="{Binding CreateNewLayerCommand}"/>
-                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/MoveLayerUpIcon.png" Grid.Column="1" Command="{Binding MoveLayerUpCommand}"/>
-                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/MoveLayerDownIcon.png" Grid.Column="2" Command="{Binding MoveLayerDownCommand}"/>
-                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/DuplicateLayerIcon.png" Grid.Column="3" Command="{Binding DuplicateLayerCommand}"/>
-                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/DestroyLayerIcon.png" Grid.Column="4" Command="{Binding RemoveLayerCommand}"/>
+                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Style="{DynamicResource LayerManagement_New}" Command="{Binding CreateNewLayerCommand}"/>
+                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Style="{DynamicResource LayerManagement_MoveUp}" Grid.Column="1" Command="{Binding MoveLayerUpCommand}"/>
+                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Style="{DynamicResource LayerManagement_MoveDown}" Grid.Column="2" Command="{Binding MoveLayerDownCommand}"/>
+                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Style="{DynamicResource LayerManagement_Duplicate}" Grid.Column="3" Command="{Binding DuplicateLayerCommand}"/>
+                    <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" Style="{DynamicResource LayerManagement_Remove}" Grid.Column="4" Command="{Binding RemoveLayerCommand}"/>
                 </Grid>
-                <StackPanel VerticalAlignment="Top" Background="{Binding Mode=OneWay, Source={StaticResource LightAccent}}" DockPanel.Dock="Top" MaxHeight="500" Visibility="{Binding LayerOptionsVisibility}">
+                <StackPanel VerticalAlignment="Top" Background="{DynamicResource LightAccent}" DockPanel.Dock="Top" MaxHeight="500" Visibility="{Binding LayerOptionsVisibility}">
                     <Label Content="Layer Options" FontSize="14" Height="30" Margin="0,5,0,0"/>
                     <WrapPanel Margin="5,0,5,5">
                         <Label Content="Name" HorizontalAlignment="Left"/>
@@ -161,7 +161,7 @@
                     </WrapPanel>
                     <CheckBox Content="Visible" IsChecked="{Binding SelectedLayerVisibility, Mode=TwoWay}" HorizontalAlignment="Left" Padding="5,0,5,0" Margin="5,0,0,5" Style="{StaticResource ContentLeftCheckBoxStyle}" Foreground="{DynamicResource Text}"/>
                 </StackPanel>
-                <Rectangle HorizontalAlignment="Stretch" Margin="2" Stroke="{Binding Mode=OneWay, Source={StaticResource Border}}" DockPanel.Dock="Top" Visibility="{Binding LayerOptionsVisibility}"/>
+                <Rectangle HorizontalAlignment="Stretch" Margin="2" Stroke="{DynamicResource Border}" DockPanel.Dock="Top" Visibility="{Binding LayerOptionsVisibility}"/>
                 <ListBox VerticalContentAlignment="Top" DockPanel.Dock="Top" FontSize="14" SelectedIndex="{Binding SelectedLayerID, Mode=TwoWay}" ItemsSource="{Binding Layers}" VerticalAlignment="Top">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
@@ -172,12 +172,12 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </DockPanel>
-            <Rectangle VerticalAlignment="Stretch" Width="1" Margin="2" Stroke="{Binding Mode=OneWay, Source={StaticResource Border}}" DockPanel.Dock="Right"/>
-            <ScrollViewer Margin="0,0,0,0" ClipToBounds="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" PanningMode="Both" VerticalScrollBarVisibility="Auto" Background="{Binding Mode=OneWay, Source={StaticResource LightAccent}}">
+            <Rectangle VerticalAlignment="Stretch" Width="1" Margin="2" Stroke="{DynamicResource Border}" DockPanel.Dock="Right"/>
+            <ScrollViewer Margin="0,0,0,0" ClipToBounds="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" PanningMode="Both" VerticalScrollBarVisibility="Auto" Background="{DynamicResource LightAccent}">
                 <ScrollViewer.DataContext>
                     <viewmodels:ArtCanvasViewModel x:Name="ArtCanvasViewModel"/>
                 </ScrollViewer.DataContext>
-                <controls:ASCIIArtCanvasVisual x:Name="artCanvas" Margin="450,450,450,450" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" DisplayArt="{Binding CurrentArt}" DisplayArtDraw="{Binding CurrentArtDraw}" SelectionHighlightRect="{Binding Selected}" TextSize="{Binding TextSize}" Tool="{Binding CurrentTool}" CanUseTool="{Binding CanUseTool}" HighlightRectThickness="{Binding HighlightThickness}" DisplayLayer="{Binding SelectedLayer}" Background="{Binding Mode=OneWay, Source={StaticResource Canvas}}" Text="{Binding Mode=OneWay, Source={StaticResource Text}}" Border="{Binding Mode=OneWay, Source={StaticResource Border}}"/>
+                <controls:ASCIIArtCanvasVisual x:Name="artCanvas" Margin="450,450,450,450" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" DisplayArt="{Binding CurrentArt}" DisplayArtDraw="{Binding CurrentArtDraw}" SelectionHighlightRect="{Binding Selected}" TextSize="{Binding TextSize}" Tool="{Binding CurrentTool}" CanUseTool="{Binding CanUseTool}" HighlightRectThickness="{Binding HighlightThickness}" DisplayLayer="{Binding SelectedLayer}" Background="{DynamicResource Canvas}" Text="{DynamicResource Text}" Border="{DynamicResource Border}"/>
             </ScrollViewer>
         </DockPanel>
     </Grid>
