--- a/WPF/Windows/NewASCIIArtDialogWindow.xaml
+++ b/WPF/Windows/NewASCIIArtDialogWindow.xaml
@@ -9,7 +9,7 @@
     <Window.Resources>
         <viewmodels:NewASCIIArtDialogViewModel x:Name="newFileDialogViewModel" x:Key="NewFileDialogViewModel"/>
     </Window.Resources>
-    <Grid>
+    <Grid Background="{DynamicResource Background}">
         <Button Content="Create new ASCII art" Margin="10,0,10,5" VerticalAlignment="Bottom" Click="CreateButton_Click" IsEnabled="{Binding CanCreate, Source={StaticResource NewFileDialogViewModel}}"/>
         <WrapPanel Margin="10,5,10,30" Orientation="Vertical">
             <Label Content="ASCII Art Options" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="14"/>
