--- a/WPF/Windows/NewASCIIArtDialogWindow.xaml
+++ b/WPF/Windows/NewASCIIArtDialogWindow.xaml
@@ -15,9 +15,9 @@
             <Label Content="ASCII Art Options" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="14"/>
             <WrapPanel HorizontalAlignment="Left" VerticalAlignment="Top">
                 <Label Content="Size" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Height="22" Text="{Binding WidthText, Source={StaticResource NewFileDialogViewModel}, ValidatesOnNotifyDataErrors=True}" Margin="8,0,0,0" Width="90"/>
+                <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Height="22" Text="{Binding WidthText, Source={StaticResource NewFileDialogViewModel}, ValidatesOnNotifyDataErrors=True}" Margin="8,0,0,0" Width="90" InputScope="Number"/>
                 <Label Content="x" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Height="22" Text="{Binding HeightText, Source={StaticResource NewFileDialogViewModel}, ValidatesOnNotifyDataErrors=True}" Width="90"/>
+                <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Height="22" Text="{Binding HeightText, Source={StaticResource NewFileDialogViewModel}, ValidatesOnNotifyDataErrors=True}" Width="90" InputScope="Number"/>
             </WrapPanel>
         </WrapPanel>
     </Grid>
