--- a/Resources/Themes/DarkTheme.xaml
+++ b/Resources/Themes/DarkTheme.xaml
@@ -49,7 +49,7 @@
         <Setter Property="Pressed" Value="{StaticResource Pressed}"/>
     </Style>
 
-    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagementButton">
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="ImageButton">
         <Setter Property="Unhighlighted" Value="{StaticResource UnhighlightedInactive}"/>
         <Setter Property="Highlighted" Value="{StaticResource HighlightedInactive}"/>
         <Setter Property="Pressed" Value="{StaticResource Pressed}"/>
@@ -107,29 +107,33 @@
         <Setter Property="ImageSource" Value="/Resources/Images/ToolIcons/Dark/TextToolIcon.png"/>
     </Style>
 
-    <!-- Layer Managemnt Buttons -->
+    <!-- Image Buttons -->
 
-    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_New" BasedOn="{StaticResource LayerManagementButton}">
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="Plus_Button" BasedOn="{StaticResource ImageButton}">
         <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Dark/NewLayerIcon.png"/>
     </Style>
 
-    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_MoveUp" BasedOn="{StaticResource LayerManagementButton}">
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="UpArrow_Button" BasedOn="{StaticResource ImageButton}">
         <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Dark/MoveLayerUpIcon.png"/>
     </Style>
 
-    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_MoveDown" BasedOn="{StaticResource LayerManagementButton}">
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="DownArrow_Button" BasedOn="{StaticResource ImageButton}">
         <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Dark/MoveLayerDownIcon.png"/>
     </Style>
 
-    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_Duplicate" BasedOn="{StaticResource LayerManagementButton}">
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="Duplicate_Button" BasedOn="{StaticResource ImageButton}">
         <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Dark/DuplicateLayerIcon.png"/>
     </Style>
 
-    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_Remove" BasedOn="{StaticResource LayerManagementButton}">
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="Remove_Button" BasedOn="{StaticResource ImageButton}">
         <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Dark/DestroyLayerIcon.png"/>
     </Style>
 
-    <Style TargetType="{x:Type controls:ImageButton}" x:Key="LayerManagement_Merge" BasedOn="{StaticResource LayerManagementButton}">
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="Merge_Button" BasedOn="{StaticResource ImageButton}">
         <Setter Property="ImageSource" Value="/Resources/Images/LayerManagementIcons/Dark/MergeLayerIcon.png"/>
+    </Style>
+
+    <Style TargetType="{x:Type controls:ImageButton}" x:Key="PaletteEdit_Button" BasedOn="{StaticResource ImageButton}">
+        <Setter Property="ImageSource" Value="/Resources/Images/Icons/Dark/PaletteEditIcon.png"/>
     </Style>
 </ResourceDictionary>
